[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artheon-sast"
version = "1.0.0"
description = "Static Application Security Testing con Google Gemini"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dorian Tituana", email = "dorian.tituana@epn.edu.ec"}]
keywords = ["security", "sast", "static-analysis", "vulnerabilities", "gemini"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
requires-python = ">=3.8"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "google-genai==0.3.0",
]

[project.urls]
Homepage = "https://github.com/DorianTitu/SAST-IA-Robusto"
Documentation = "https://github.com/DorianTitu/SAST-IA-Robusto/docs"
Repository = "https://github.com/DorianTitu/SAST-IA-Robusto.git"
"Bug Tracker" = "https://github.com/DorianTitu/SAST-IA-Robusto/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
mongodb = ["pymongo>=4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
